tests/errors/unterminated-string.p8
/ This program produces an unterminated string error.

ERRSTRNG,   "Hello, Error!\n
$
